--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>PixelArt WebBLE</title>
+<style>
+/* Style the input box that opens the picker */
+input[type="color"] {
+  /* Common styles across browsers */
+  -webkit-appearance: none; /* Removes default WebKit styling */
+  border: none;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  border-radius: 10px; /* Example style */
+}
+
+/* For advanced, browser-specific internal styling (use with caution) */
+/* Style the internal swatch wrapper (WebKit/Blink browsers like Chrome/Safari) */
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+
+/* Style the internal color swatch (WebKit/Blink browsers) */
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+  border-radius: 10px; /* Matches the outer border radius */
+}
+</style>
 </head>
 <body>
     <div class="topnav">
@@ -44,3 +68,4 @@
 <script src="pixelart.js"></script>
 </body>
 </html>
+
